some porting progress